# leprecon

./: README.md
leprecon_microservices/: .gitignore  Cargo.toml  README.md  docker-compose-local.yaml  docker-compose.yaml  example.env  run.bash
leprecon_microservices/.github/: dependabot.yaml
leprecon_microservices/.github/workflows/: account.yaml  deploy_account.yaml  deploy_game_catalog.yaml  development.yaml  feature.yaml  game_catalog.yaml  lint.yaml
leprecon_microservices/kubernetes/controller/: gateway_api.yaml  gateway_api_local.yaml
leprecon_microservices/kubernetes/deployment_service/: account.yaml  game_catalog.yaml  session_database.yaml
leprecon_microservices/kubernetes/namespace/: leprecon.yaml
leprecon_microservices/kubernetes/secret/: example_account_secret.yaml  example_database_secret.yaml  example_game_catalog_secret.yaml
leprecon_microservices/src/: auth.rs  broker.rs  lib.rs  signals.rs  template.rs  utils.rs
leprecon_microservices/src/account/: Dockerfile  email.rs  email_verification.rs  embedded.rs  fixture.rs  main.rs  model.rs  user.rs
leprecon_microservices/src/auth/: db.rs  model.rs  request.rs
leprecon_microservices/src/game_catalog/: Dockerfile  catalog.rs  fixture.rs  main.rs
leprecon_microservices/src/payment/: balance.rs  main.rs
leprecon_microservices/src/template/: balance.rs  catalog.rs  payment_balance.rs  snackbar.rs  user.rs
leprecon_microservices/src/utils/: extract.rs
leprecon_microservices/templates/: balance.html  catalog.html  payment_balance.html  snackbar.html  user_information.html
(+55 files in other folders)
